compiler/testData/diagnostics/tests/tailRecursions/tailRecursionInFinally.kt
tailRecursive fun test() : Unit {
    try {
    } finally {
        <!PARTIAL_TAIL_RECURSIVE_CALL!>test<!>()
    }
}